--- a/contact.htm
+++ b/contact.htm
@@ -21,7 +21,7 @@
 
     <main>
         
-        <img src="imgs/map.jpg" alt="Map of location of the EK Restaurant">
+        <img src="imgs/map.webp" alt="Map of location of the EK Restaurant">
 
         <section>
             <address>
