--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </nav>
 
     <main>
-        <img src="imgs/ek_restaurant.jpg" alt="Image of the EK Restaurant">
+        <img src="imgs/ek_restaurant.webp" alt="Image of the EK Restaurant">
 
         <section>
             <p>
