--- a/menu.htm
+++ b/menu.htm
@@ -21,7 +21,7 @@
 
     <main>
         <section class="menuCard">
-            <img src="imgs/salad.jpg" alt="Image of the Turing Salad">
+            <img src="imgs/salad.webp" alt="Image of the Turing Salad">
             <h1>Turing Salad</h1>
             <div class="menuTxtWrapper">
                 <p>
@@ -35,7 +35,7 @@
             </div>
         </section>
         <section class="menuCard">
-            <img src="imgs/pizza.jpg" alt="Image of the Pizza Berners-Lee">
+            <img src="imgs/pizza.webp" alt="Image of the Pizza Berners-Lee">
             <h1>Pizza Berners-Lee</h1>
             <div class="menuTxtWrapper">
                 <p>
@@ -48,7 +48,7 @@
             </div>
         </section>
         <section class="menuCard">
-            <img src="imgs/burger.jpg" alt="Image of the Codd Hamburger">
+            <img src="imgs/burger.webp" alt="Image of the Codd Hamburger">
             <h1>Codd Hamburger</h1>
             <div class="menuTxtWrapper">
                 <p>
@@ -63,7 +63,7 @@
             </div>
         </section>
         <section class="menuCard">
-            <img src="imgs/icecream.jpg" alt="Image of the Cerf Cream">
+            <img src="imgs/icecream.webp" alt="Image of the Cerf Cream">
             <h1>Cerf Cream</h1>
             <div class="menuTxtWrapper">
                 <p>
